--- a/frontend-react/index.html
+++ b/frontend-react/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend-react</title>
+    <meta name="description" content="FutureAlgo – Zodiac, Bazi, Tarot, Numerology and more. Explore your destiny with a modern fortune-telling portal." />
+    <meta name="theme-color" content="#0f0d18" />
+    <title>FutureAlgo – Fortune Telling Portal</title>
   </head>
   <body>
     <div id="root"></div>
